# humanoid

./: .gitignore  A.csv  F.csv  LICENSE  M.csv  README.md  robot_run.sh  x.csv
surea4/devel/: .catkin  .rosinstall
surea4/devel/include/offlinepublisher/: num.h  srv1.h  srv1Response.h
surea4/devel/include/surena_usb/: reset_nodeRequest.h  reset_nodeResponse.h
surea4/devel/lib/gui/: guinode
surea4/devel/lib/pkgconfig/: gui.pc  offlinepublisher.pc  surena_usb.pc
surea4/devel/lib/surena_usb/: surena_usb
surea4/devel/share/offlinepublisher/cmake/: offlinepublisherConfig.cmake
surea4/devel/share/surena_usb/cmake/: surena_usbConfig.cmake
surea4/src/gui/: CMakeLists.txt
surena4/: surena.workspace.user.43e8703  surena.workspace.user.f351345  surena.workspace.user.febdab3
surena4/devel/: setup.sh
surena4/devel/include/offlinepublisher/: srv1Request.h
surena4/devel/include/surena_usb/: active_csp.h  active_cspRequest.h  active_cspResponse.h  reset_node.h
surena4/devel/lib/offlinepublisher/: offlinepublisher
surena4/devel/lib/pkgconfig/: surena_description.pc  surena_gazebo.pc
surena4/devel/lib/surena_usb/: surena_usb
surena4/devel/share/gui/cmake/: guiConfig.cmake
surena4/devel/share/offlinepublisher/cmake/: offlinepublisher-msg-paths.cmake
surena4/devel/share/surena_description/cmake/: surena_descriptionConfig.cmake
surena4/devel/share/surena_gazebo/cmake/: surena_gazeboConfig.cmake
surena4/devel/share/surena_usb/cmake/: surena_usb-msg-paths.cmake
surena4/src/data_logger/: CMakeLists.txt  package.xml
surena4/src/data_logger/src/: datalogger.cpp  mainwindow.cpp  mainwindow.h  qnode.cpp  qnode.h
surena4/src/foot_sensor/: CMakeLists.txt  package.xml
surena4/src/foot_sensor/src/: foot_sensor.cpp
surena4/src/ft_sensor_board/: CMakeLists.txt  package.xml
surena4/src/ft_sensor_board/src/: epose.cpp  ft_sensor.cpp  ft_sensor.h  main.cpp  mainwindow.h
surena4/src/gui/: CMakeLists.txt  package.xml
surena4/src/gui/src/: gui.cpp  mainwindow.cpp
surena4/src/offlinePublisher/src/: offlinepublisher.cpp
surena4/src/qwheel/: CMakeLists.txt  package.xml
surena4/src/qwheel/config/: joint_names_qwheel.yaml
surena4/src/qwheel/launch/: display.launch  gazebo.launch
surena4/src/qwheel/meshes/: L1.STL  L2.STL  L4.STL  base_link.STL
surena4/src/qwheel/urdf/: qwheel.urdf
surena4/src/robot_sim/: CMakeLists.txt  package.xml  surena.rviz  surena2.rviz
surena4/src/robot_sim/config/: diffdrive.yaml  gripper.yaml  head.yaml  joints.yaml  robotjoints.yaml  robotjoints2.yaml  testjoints.yaml
surena4/src/robot_sim/launch/: robot_gazebo.launch  robot_gazebo2.launch  robot_rviz.launch  robot_test.launch
surena4/src/robot_sim/urdf/: cube.xacro  model.sdf  robot.xacro  surena.xacro  surena2.xacro
surena4/src/robot_teleop/: CMakeLists.txt
surena4/src/robot_teleop/src/: mainwindow.cpp  mainwindow.h  qnode.cpp  qnode.h
surena4/src/speech/: CMakeLists.txt  package.xml
surena4/src/speech/src/: roham-asr.h  speech.cpp
surena4/src/speech/src/sorena/: rlm.rhm  roham_asr_001.rhm  (+8 more)
surena4/src/srenagui/: CMakeLists.txt  package.xml
surena4/src/surena_description/: CMakeLists.txt
surena4/src/surena_description/meshes/: Upper-arm-right.STL
surena4/src/surena_description/sdf/: Surena4.sdf  model.config
surena4/src/surena_eth/: CMakeLists.txt
surena4/src/surena_eth/src/: can.cpp  can.h  epos.cpp  epos.h  ethernetpackets.h  main.cpp  pingmodel.cpp  qnode.cpp  qnode.h  robot.cpp  robot.h  robotcontroller.cpp  robotcontroller.h  tcphandler.cpp  tcphandler.h
surena4/src/surena_eth_old/: CMakeLists.txt  package.xml
surena4/src/surena_eth_old/src/: epos.cpp  main.cpp  qnode.cpp  robot.cpp  robot.h
surena4/src/surena_gazebo/: CMakeLists.txt
surena4/src/surena_gazebo/launch/: surena.launch
surena4/src/surena_gazebo/worlds/: surena.world
surena4/src/surena_usb/: CMakeLists.txt  package.xml
surena4/src/surena_usb/src/: can.cpp  can.h  epose.h  main.cpp  usbhid.cpp  usbhid.h
surena4/src/talk/: CMakeLists.txt  package.xml
surena4/src/talk/src/: ExportSO.h  talk.cpp
surena4/src/trajectory_generation/: CMakeLists.txt  package.xml
surena4/src/trajectory_generation/src/: AnkleOrientation.cpp  CheckPoint.cpp  LinkM.cpp  LinkM.h  MinimumJerkInterpolation.cpp  MinimumJerkInterpolation.h  Robot.cpp  Robot.h  SURENA4OfflineRamp.cpp  TaskSpace.cpp  TaskSpace.h  ankle_controller.cpp  bumpsensor.cpp  deflection_measure.cpp  hand_gui.cpp  hand_gui.h  hand_gui.ui  hand_test.cpp  hand_trajectory.cpp  hand_trajectory_func_path.cpp  hand_trajectory_home.cpp  hand_trajectory_offlinePublisher.cpp  hand_trajectory_pick_and_place.cpp  hand_trajectory_random.cpp  hand_trajectory_right_grip2.cpp  hand_trajectory_shaking.cpp  hand_trajectory_shaking.cpp.autosave  hand_trajectory_waving.cpp  hand_trajectory_wholebody_grip.cpp  hands_interaction.cpp  head_trajectory_follow.cpp  home_legs.cpp  imu_stick.cpp  key_control_of_legs.cpp  left_hand.cpp  left_hand.h  malek_IK_test.cpp  onlinetrajectorygeneration.cpp  qcgenerator.cpp  qcgenerator.h  (+31 more)
surena4/src/trajectory_generation/src/HandOfflineData/: hands_joint_data_a.txt  hands_joint_data_b.txt  hands_joint_data_c.txt  hands_joint_data_circle.txt  hands_joint_data_d.txt  hands_joint_data_talk.txt  hands_joint_data_waving.txt
surena4/src/trajectory_generation/src/OfflineWalkData/: JointDataTc1.49Td0.75  JointDataTc1.5Td0.75  JointDataTc1.5Td0.75_1  JointDataTc1.5Td0.75_2  JointDataTc1.705Td0.75  JointDataTestRadian.txt  JointDataTestRadian3.txt  JointDataTestRadian4.txt  JointDataTestRadian5.txt  JointDataTestRadian6  offlinepub.txt
surena4/src/trajectory_generation/srv/: handmove.srv  walk.srv
surena4/src/urdf_sim_tutorial-master/config/: head.yaml
surena4/src/urdf_sim_tutorial-master/launch/: 09-joints.launch  10-head.launch
surena4/src/xsens_driver/config/: xsens.yaml  xsens2.yaml
surena4/src/xsens_driver/launch/: xsens2.launch
surena4/src/yei_imu/: CMakeLists.txt  package.xml
surena4/src/yei_imu/src/: yei.cpp
surena4/src/yei_imu/srv/: srv1.srv
uml/surena-eth/: Main.uxf  RosNode.uxf  topology.uxf
(+41 files in other folders)
